[package]
name = "sb3-burn"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_approx_eq = "1.1.0"
burn = { version = "0.18.0", features = ["ndarray", "wgpu", "autodiff", "train", "tch"]}
csv = "1.3.0"
dyn-clone = "1.0.17"
indicatif = "0.17.8"
ndarray = "0.16.1"
plotters = "0.3.6"
rand = "0.9.2"
serde = { version = "1.0.203", features = ["std", "derive"] }

[profile.release]
opt-level=3
lto = "thin"
codegen-units = 1
panic = "abort"