[metadata]
name = gym_sock_mgr
version = 1.0.0
author = Jade Davis
author_email = jadedavis336@gmail.com
description = Manages a socket connection, allowing clients to remotely train a gym env from any language
url = https://github.com/will-maclean/sb3-burn
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    gym
    opencv-python

[options.packages.find]
where = src