[package]
name = "temp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
burn = { version = "0.14.0", features = ["ndarray", "wgpu", "autodiff", "train"], git = "https://github.com/tracel-ai/burn" }
csv = "1.3.0"
indicatif = "0.17.8"
ndarray = "0.15.6"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
